# server/src/handlers/put-comment.mjs
@@ -31,8 +31,8 @@ export const putCommentHandler = async (event) => {
 
     // Get id and name from the body of the request
     const body = JSON.parse(event.body);
-    const id = 'comment-' + event.pathParameters.id;
-    const theme_id = 'theme-' + body.theme_id;
+    const id = 'comment-' + event.pathParameters.comment_id;
+    const theme_id = 'theme-' + event.pathParameters.theme_id;
     const comment = body.comment;
 
     try {
